--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -126,9 +126,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="도서설명 스크립트 쭉~"
                 android:lineSpacingMultiplier="1.5"
                 android:letterSpacing="0.1"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/deepGray" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="게시글 조회"
+                android:textStyle="bold"
+                />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_board_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                android:visibility="visible">
+            </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:id="@+id/text_view_no_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="조회된 게시물이 없습니다."
+                android:gravity="center_horizontal"
+                android:textStyle="bold"
+                android:visibility="invisible"/>
+
         </LinearLayout>
     </ScrollView>
     <LinearLayout
