--- a/app/src/main/res/layout/item_maraton_book_add.xml
+++ b/app/src/main/res/layout/item_maraton_book_add.xml
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <EditText
-        android:id="@+id/book_maraton_name"
+    android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="도서 이름" />
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/ll_item_reply_layout"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/lightGray"
+            android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/book_maraton_page"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="전체 쪽수"
-        android:inputType="number" />
-
-    <Button
-        android:id="@+id/btn_maratonbook_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="책 추가 +" />
-</LinearLayout>
+            <TextView
+                android:id="@+id/text_view_maraton_history_item_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:maxLength="10"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:text="0000-00-00" />
+            <TextView
+                android:id="@+id/text_view_maraton_history_item_page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="0p / 0p"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+        <TextView
+            android:id="@+id/text_view_maraton_history_item_point"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:text="간단한 평을 쓰지 않았습니다."/>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
