--- a/app/src/main/res/drawable/button_clip_style.xml
+++ b/app/src/main/res/drawable/button_clip_style.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="20dp" />
-    <solid android:color="#b3e5fc" />
+    <corners android:radius="10dp" />
+    <solid android:color="#fff" />
     <padding
         android:bottom="0dp"
         android:left="0dp"
@@ -10,5 +10,5 @@
         android:top="0dp" />
     <stroke
         android:width="1dp"
-        android:color="#e1e2e1" />
+        android:color="@color/primary" />
 </shape>
