--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -4,57 +4,67 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_interpark"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="인터파크"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:background="@color/white"/>
+            android:textColor="@color/blackSoft"
+            android:textSize="18dp" />
+
         <View
-            android:layout_width="2dp"
-            android:layout_height="50dp"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:background="@color/black"/>
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/primary" />
+
         <Button
             android:id="@+id/btn_aladin"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:text="알라딘"
-            android:textSize="18sp"
-            android:textColor="@color/gray"
-            android:textStyle="bold"
-            android:background="@color/white"/>
+            android:textColor="@color/blackSoft"
+            android:textSize="18dp" />
+
         <View
-            android:layout_width="2dp"
+            android:layout_width="1dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:background="@color/black"/>
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/primary" />
+
         <Button
             android:id="@+id/btn_lib"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="도서관 대출"
-            android:textSize="17sp"
-            android:textColor="@color/gray"
-            android:textStyle="bold"
-            android:background="@color/white"/>
+            android:text="공공도서관"
+            android:textColor="@color/blackSoft"
+            android:textSize="18dp"/>
 
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_centerInParent="true"
-        android:background="@color/black" />
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/primary" />
+
     <LinearLayout
         android:id="@+id/layout_recommend_btn"
         android:layout_width="match_parent"
@@ -65,44 +75,36 @@
             android:id="@+id/btn_recommend_bestseller"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@drawable/selector_btn_clip"
             android:text="베스트 셀러"
-            android:textStyle="bold"/>
-        <View
-            android:layout_width="2dp"
-            android:layout_height="50dp"
-            android:layout_centerInParent="true"
-            android:background="@color/black"/>
+            android:textSize="18dp" />
+
         <Button
             android:id="@+id/btn_recommend_new"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/btn_recommend_bestseller"
-            android:background="@color/white"
+            android:layout_weight="1"
+            android:background="@drawable/selector_btn_clip"
             android:text="새로나온 책"
-            android:textColor="@color/gray"
-            android:textStyle="bold"/>
-        <View
-            android:layout_width="2dp"
-            android:layout_height="50dp"
-            android:layout_centerInParent="true"
-            android:background="@color/black"/>
+            android:textColor="@color/blackSoft"
+            android:textSize="18dp" />
+
         <Spinner
             android:id="@+id/spinner_recommend_category"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
             android:entries="@array/도서관카테고리"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_centerInParent="true"
-        android:background="@color/black" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -133,14 +135,14 @@
             android:ems="6"
             android:imeOptions="actionSearch"
             android:lines="1"
-            android:singleLine="true" />/>
+            android:singleLine="true" />
 
         <ImageButton
             android:id="@+id/btn_book_search_data"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/ic_search"
             android:text="검색" />
 
@@ -150,7 +152,6 @@
         android:id="@+id/recycler_view_recommend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical">
-    </android.support.v7.widget.RecyclerView>
+        android:scrollbars="vertical" />
 
 </LinearLayout>
