--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -7,11 +7,11 @@
     <item
         android:id="@+id/account_icon"
         android:title="사용자"
-        android:icon="@drawable/ic_account"
+        android:icon="@drawable/ic_person"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/notice_icon"
         android:title="공지사항"
-        android:icon="@drawable/ic_note"
+        android:icon="@drawable/ic_notice"
         app:showAsAction="ifRoom"/>
 </menu>
